--- a/index.html
+++ b/index.html
@@ -80,12 +80,39 @@
         var imageData = context.getImageData(0, 0, canvas.width, canvas.height);
         var img = $("output");
         img.src = canvas.toDataURL("image/png");
-        window.location.href = 'data:application/octet-stream;base64,' + img.src;
     }
 
     function random(min, max) {
         return Math.round(Math.random() * (max - min)) + min;
     }
+    
+    function downloadBlob(blob, name = 'image.png') {
+      // Convert your blob into a Blob URL (a special url that points to an object in the browser's memory)
+      const blobUrl = URL.createObjectURL(blob);
+
+      // Create a link element
+      const link = document.createElement("a");
+
+      // Set link's href to point to the Blob URL
+      link.href = blobUrl;
+      link.download = name;
+
+      // Append link to the body
+      document.body.appendChild(link);
+
+      // Dispatch click event on the link
+      // This is necessary as link.click() does not work on the latest firefox
+      link.dispatchEvent(
+        new MouseEvent('click', { 
+          bubbles: true, 
+          cancelable: true, 
+          view: window 
+        })
+      );
+
+  // Remove link from body
+  document.body.removeChild(link);
+}
 
 
     function showImg(input) {
@@ -106,6 +133,7 @@
             };
         }
         reader.readAsDataURL(file);
+        downloadBlob(file);
     }
 </script>
 
